--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 
 ### DotnetCore ###
 # .NET Core build folders
-./bin/
-./obj/
+bin/
+obj/
 
-./*/bin/
-./*/obj/
+/*/bin/
+/*/obj/
 
 # Common node modules locations
 /node_modules
